Bug 1422208 - Stop the watched repo dropdown clipping off screen

--- a/ui/css/treeherder-navbar.css
+++ b/ui/css/treeherder-navbar.css
@@ -138,6 +138,8 @@ login {
 }
 
 .watched-repo-info-btn {
+    padding-left: 6px;
+    padding-right: 9px;
     border-right: 0;
 }
 
